--- a/DirectXGameClassed.vcxproj.filters
+++ b/DirectXGameClassed.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClCompile Include="DebugTools\ImGuiManager\ImGuiManager.cpp">
       <Filter>ImGuiManager</Filter>
     </ClCompile>
+    <ClCompile Include="Model.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="structs.h">
@@ -232,6 +235,12 @@
     </ClInclude>
     <ClInclude Include="define.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>Feature\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelCommon.h">
+      <Filter>Feature\Model</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
