プロジェクトのリファクタリングと新機能の追加
- `DirectX12.h` の Getter メソッドの整形を修正し、インデントを統一
- `DirectXGameClassed.vcxproj` に警告をエラーとして扱わない設定を追加
- `ModelManager.cpp` と `ModelManager.h` をプロジェクトに追加
- `DirectXGameClassed.vcxproj.filters` に新しいソースファイルとヘッダーファイルを追加
- `ImGui.vcxproj` に `imgui_impl_dx12` と `imgui_impl_win32` のファイルを追加
- `ImGui.vcxproj.filters` に対応するヘッダーファイルとソースファイルを追加
- `ModelHelper.cpp` の `LoadObjFile` メソッドを修正
- `Object3d.cpp` と `Object3d.h` のモデルデータ関連の処理を `Model` クラスに移行
- `Model.cpp` と `Model.h` にモデルデータ関連の処理を追加
- `ModelSystem.h` を削除
- `main.cpp` に `ModelManager` の初期化とモデルの読み込みを追加
- `ModelManager.cpp` と `ModelManager.h` を新規追加し、モデルの管理機能を実装

--- a/DirectXGameClassed.vcxproj
+++ b/DirectXGameClassed.vcxproj
@@ -59,6 +59,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <AdditionalIncludeDirectories>$(ProjectDir)Externals\imgui\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <TreatWarningAsError>false</TreatWarningAsError>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -132,6 +133,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Math\impl\Vector4.cpp" />
     <ClCompile Include="Math\MathExtension\mathExtension.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="ModelManager.cpp" />
     <ClCompile Include="Utility\ConvertString.cpp" />
     <ClCompile Include="Utility\Logger.cpp" />
   </ItemGroup>
@@ -160,7 +162,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Math\Vector3.h" />
     <ClInclude Include="Math\Vector4.h" />
     <ClInclude Include="Model.h" />
-    <ClInclude Include="ModelCommon.h" />
+    <ClInclude Include="ModelManager.h" />
     <ClInclude Include="structs.h" />
     <ClInclude Include="Utility\ConvertString.h" />
     <ClInclude Include="Utility\Logger.h" />
