--- a/DirectXGameClassed.vcxproj.filters
+++ b/DirectXGameClassed.vcxproj.filters
@@ -67,17 +67,17 @@
     <Filter Include="ImGuiManager">
       <UniqueIdentifier>{e4815223-2288-4cdb-9168-0d4dca0b53d5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Common">
+      <UniqueIdentifier>{ebae1fd8-cb01-44bc-adbe-7d51471725ab}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Utility">
+      <UniqueIdentifier>{c81e2914-fa28-4869-9546-e5505a3be28b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HLSL">
+      <UniqueIdentifier>{0c17c647-2548-407e-b3bf-708a04226c6c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Utility\ConvertString.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Utility\Logger.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="Core\Win32\Win32Application.cpp">
       <Filter>Win32Application</Filter>
     </ClCompile>
@@ -89,9 +89,6 @@
     </ClCompile>
     <ClCompile Include="Core\DirectX12\DX12Helper.cpp">
       <Filter>DirectX12</Filter>
-    </ClCompile>
-    <ClCompile Include="Features\Input.cpp">
-      <Filter>Feature\Input</Filter>
     </ClCompile>
     <ClCompile Include="Core\DirectX12\DirectX12_Impl.cpp">
       <Filter>DirectX12</Filter>
@@ -150,40 +147,37 @@
     <ClCompile Include="DebugTools\ImGuiManager\ImGuiManager.cpp">
       <Filter>ImGuiManager</Filter>
     </ClCompile>
-    <ClCompile Include="Model.cpp">
+    <ClCompile Include="Features\Model\Model.cpp">
+      <Filter>Feature\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\Model\ModelManager.cpp">
+      <Filter>Feature\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Utility\ConvertString.cpp">
+      <Filter>Utility</Filter>
+    </ClCompile>
+    <ClCompile Include="Utility\Logger.cpp">
+      <Filter>Utility</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="ModelManager.cpp">
-      <Filter>Feature\Model</Filter>
+    <ClCompile Include="Features\Input\Input.cpp">
+      <Filter>Feature\Input</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="structs.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="Utility\ConvertString.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="Utility\Logger.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="Core\Win32\Win32Application.h">
       <Filter>Win32Application</Filter>
     </ClInclude>
     <ClInclude Include="Core\DirectX12\DirectX12.h">
       <Filter>DirectX12</Filter>
     </ClInclude>
-    <ClInclude Include="Utility\ReakChecker.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="Core\DirectX12\BlendMode.h">
       <Filter>DirectX12\BlendMode</Filter>
     </ClInclude>
     <ClInclude Include="Core\DirectX12\DX12Helper.h">
       <Filter>DirectX12</Filter>
-    </ClInclude>
-    <ClInclude Include="Features\Input.h">
-      <Filter>Feature\Input</Filter>
     </ClInclude>
     <ClInclude Include="Core\DirectX12\Framerate.h">
       <Filter>DirectX12\FPS</Filter>
@@ -236,22 +230,43 @@
     <ClInclude Include="DebugTools\ImGuiManager\ImGuiManager.h">
       <Filter>ImGuiManager</Filter>
     </ClInclude>
-    <ClInclude Include="define.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="Model.h">
+    <ClInclude Include="Features\Model\Model.h">
       <Filter>Feature\Model</Filter>
     </ClInclude>
-    <ClInclude Include="ModelManager.h">
+    <ClInclude Include="Features\Model\ModelManager.h">
       <Filter>Feature\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\define.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\structs.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility\ReakChecker.h">
+      <Filter>Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility\ConvertString.h">
+      <Filter>Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility\Logger.h">
+      <Filter>Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Input\Input.h">
+      <Filter>Feature\Input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
-    <None Include="Resources\shaders\Object3d.hlsli" />
+    <None Include="Resources\shaders\Object3d.hlsli">
+      <Filter>HLSL</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Resources\shaders\Object3d.PS.hlsl" />
-    <FxCompile Include="Resources\shaders\Object3d.VS.hlsl" />
+    <FxCompile Include="Resources\shaders\Object3d.PS.hlsl">
+      <Filter>HLSL</Filter>
+    </FxCompile>
+    <FxCompile Include="Resources\shaders\Object3d.VS.hlsl">
+      <Filter>HLSL</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
