プロジェクトファイルの大幅な変更と削除
DirectXGameClassed.sln、DirectXGameClassed.vcxproj、DirectXGameClassed.vcxproj.filtersファイルを削除しました。これにより、ソリューションファイル、プロジェクトファイル、およびフィルタ設定が削除されました。

Engine.vcxproj.filtersファイルとEngine.vcxprojファイルに新しいXMLコンテンツを追加しました。これにより、プロジェクトのビルド設定、インクルードパス、リンク設定、ビルド後のイベント、シェーダーコンパイル設定などが定義されました。また、外部プロジェクト（DirectXTex、ImGui）への参照が追加されました。

GameEngine_DX12.slnファイルに新しいプロジェクトが追加されました。これにより、DirectXTex、ImGui、Engineの3つのプロジェクトが含まれ、各プロジェクトのビルド構成とプラットフォームが設定されました。

--- a/Project/Engine.vcxproj
+++ b/Project/Engine.vcxproj
@@ -14,8 +14,9 @@
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{9fd2d32d-dab0-40a1-b430-cbc12517b87c}</ProjectGuid>
-    <RootNamespace>DirectXGameClassed</RootNamespace>
+    <RootNamespace>Engine</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Engine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
