--- a/.github/workflows/DebugBuildTest.yml
+++ b/.github/workflows/DebugBuildTest.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - customized03
 env:
-  SOLUTION_FILE_PATH: DirectXGameClassed.sln
+  SOLUTION_FILE_PATH: Project/GameEngine_DX12.sln
   CONFIGURATION: Debug
 
 jobs:
