DX12Helperのリファクタリングと機能追加
DX12Helper.cppとDX12Helper.hのインクルードパスを変更し、関連するプロジェクトファイルとフィルタを更新しました。DX12Helper.cppとDX12Helper.hの内容を削除し、新しい関数を追加しました。これにより、DirectX 12のデバイスやリソースの作成、エラーハンドリング、シェーダーのコンパイル、テクスチャの読み込みとアップロードなどが簡素化され、コードの再利用性が向上しました。

--- a/Project/Engine.vcxproj
+++ b/Project/Engine.vcxproj
@@ -115,8 +115,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Engine\Core\DirectX12\BlendMode.cpp" />
     <ClCompile Include="Engine\Core\DirectX12\DirectX12.cpp" />
     <ClCompile Include="Engine\Core\DirectX12\DirectX12_Impl.cpp" />
-    <ClCompile Include="Engine\Core\DirectX12\DX12Helper.cpp" />
     <ClCompile Include="Engine\Core\DirectX12\Framerate.cpp" />
+    <ClCompile Include="Engine\Core\DirectX12\Helper\DX12Helper.cpp" />
     <ClCompile Include="Engine\Core\DirectX12\TextureManager.cpp" />
     <ClCompile Include="Engine\Core\Win32\Win32Application.cpp" />
     <ClCompile Include="Engine\DebugTools\DebugManager\DebugManager.cpp" />
@@ -148,8 +148,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\Common\structs.h" />
     <ClInclude Include="Engine\Core\DirectX12\BlendMode.h" />
     <ClInclude Include="Engine\Core\DirectX12\DirectX12.h" />
-    <ClInclude Include="Engine\Core\DirectX12\DX12Helper.h" />
     <ClInclude Include="Engine\Core\DirectX12\Framerate.h" />
+    <ClInclude Include="Engine\Core\DirectX12\Helper\DX12Helper.h" />
     <ClInclude Include="Engine\Core\DirectX12\TextureManager.h" />
     <ClInclude Include="Engine\Core\Win32\Win32Application.h" />
     <ClInclude Include="Engine\DebugTools\DebugManager\DebugManager.h" />
