--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Project/Externals/VectorMatrix"]
-	path = Project/Externals/VectorMatrix
+	path = Externals/VectorMatrix
 	url = https://github.com/Souto-Naitou/VectorMatrix.git
