--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Project/Externals/VectorMatrix"]
-	path = Externals/VectorMatrix
+[submodule "Engine/Externals/VectorMatrix"]
+	path = Engine/Externals/VectorMatrix
 	url = https://github.com/Souto-Naitou/VectorMatrix.git
