--- a/.github/workflows/DebugBuildTest.yml
+++ b/.github/workflows/DebugBuildTest.yml
@@ -2,7 +2,7 @@ name: DebugBuild
 on:
   push:
     branches:
-      - customized03
+      - main
 env:
   SOLUTION_FILE_PATH: Engine/GameEngine_DX12.sln
   CONFIGURATION: Debug
